<resources>
    <string name="app_name">JobFlow</string>
    <string name="file_sharing_authority">com.sivakasi.papco.jobflow.file_provider</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_print_order">New print order</string>
    <string name="new_job">New job</string>
    <string name="new_jobs">New jobs</string>
    <string name="in_progress">In Progress</string>
    <string name="repeat_job">Repeat job</string>
    <string name="rid">RID</string>
    <string name="blank_if_party_plate">Blank if party plate</string>
    <string name="job_details">Job details</string>
    <string name="client_name">Client name</string>
    <string name="job_name">Job name</string>
    <string name="our_own">Our own</string>
    <string name="party_own">Party\'s own</string>
    <string name="paper_details">Paper details</string>
    <string name="add_paper_detail">Add paper detail</string>
    <string name="plate_making_details">Plate making details</string>
    <string name="trim_height">Trim Height</string>
    <string name="trim_width">Trim Width</string>
    <string name="job_height">Job Height</string>
    <string name="job_width">Job Width</string>
    <string name="gripper">Gripper</string>
    <string name="tail">Tail</string>
    <string name="machine">Machine</string>
    <string name="screen">Screen</string>
    <string name="backside_machine">Backside Machine</string>
    <string name="mm">mm</string>
    <string name="old_plate_number">Old plate: %1$d</string>
    <string name="plate_number">Plate number: %1$d</string>
    <string name="blank_if_same_as_front_machine">Blank if same as front machine</string>
    <string name="error_invalid_trim_size">Should be %1$d to %2$d</string>
    <string name="error_invalid_positive_number">Should be greater than zero</string>
    <string name="error_invalid_machine_name">Invalid machine name</string>
    <string name="error_invalid_screen">Invalid Screen</string>
    <string name="error_unknown_error">Unknown error occurred during processing</string>
    <string name="error_not_optional_field">This field is not optional</string>
    <string name="backside">Backside</string>
    <string name="post_press_details">Post press details</string>
    <string name="lamination">Lamination</string>
    <string name="foils">Foils</string>
    <string name="scoring">Scoring</string>
    <string name="folding">Folding</string>
    <string name="binding">Binding</string>
    <string name="spot_uv">Spot UV</string>
    <string name="aqueous_coating">Aqueous coating</string>
    <string name="cutting">Cutting</string>
    <string name="packing">Packing</string>
    <string name="create_print_order">Create print order</string>
    <string name="save_print_order">Save print order</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="gsm">GSM</string>
    <string name="substrate">Substrate</string>
    <string name="sheets">Sheets</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_at_least_one_paper_detail_required">Please add at least one paper detail</string>
    <string name="error_invalid_job_height">Invalid job height</string>
    <string name="error_invalid_job_width">Invalid job width</string>
    <string name="outside_plate">Outside plate</string>
    <string name="printing_details">Printing details</string>
    <string name="colours">Colours</string>
    <string name="printing_instructions">Printing instructions</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="expression">Expression</string>
    <string name="running_time">Running Time</string>
    <string name="has_spot_colours">Has spot colours</string>
    <string name="error_invalid_hours">Invalid hours</string>
    <string name="error_invalid_minutes">Invalid minutes</string>
    <string name="error_invalid_expression">Invalid expression</string>
    <string name="pvc">PVC</string>
    <string name="bopp">BOPP</string>
    <string name="matt">MATT</string>
    <string name="micron">Micron</string>
    <string name="remarks">Remarks</string>
    <string name="error_invalid_micron">Invalid micron</string>
    <string name="saddle_stitched">Saddle stitched</string>
    <string name="perfect_binding">Perfect binding</string>
    <string name="case_binding">Case binding</string>
    <string name="print_order_not_found">Print order not found</string>
    <string name="confirmation_old_print_order_not_found_proceed">Old print order not found.
        Do you want to proceed with creating the job with the given plate number anyway?</string>
    <string name="proceed">PROCEED</string>
    <string name="invalid_plate_number">Should be greater than zero</string>
    <string name="not_applicable">Not applicable</string>
    <string name="required_field">*Required</string>
    <string name="urgent">Urgent</string>
    <string name="pending_remarks">Pending remarks</string>
    <string name="blank_if_not_pending">Blank if not pending</string>
    <string name="reprint">REPRINT</string>
    <string name="success_print_order_creation">Print order created successfully!</string>
    <string name="success_print_order_updating">Print order updated successfully!</string>
    <string name="one_moment_please">One moment please</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="xx_days_ago">%1$d days ago</string>
    <string name="duration_in_xx_jobs">%1$s in %2$d Jobs</string>
    <string name="add_machine">Add Machine</string>
    <string name="edit_machine">Edit Machine</string>
    <string name="machine_name">Machine name</string>
    <string name="machine_already_exist">Machine with given name already exist</string>
    <string name="invoice_detail">Invoice detail</string>
    <string name="date">Date</string>
    <string name="plate_number_info">Plate number</string>
    <string name="trimming_size">Trimming size</string>
    <string name="job_size">Job size</string>
    <string name="printing_size">Printing size</string>
    <string name="printing_quantity">Printing Quantity</string>
    <string name="xx_sheets">%1$d Sheets</string>
    <string name="po_xx">PO %1$d</string>
    <string name="xx_jobs">%1$d Jobs</string>
    <string name="job_type">Job type</string>
    <string name="do_not_check_size">"Don't check size"</string>
    <string name="cancel_confirmation">Are you sure you want to cancel the selected print orders?</string>
    <string name="revert_confirmation">Are you sure you want to remove the selected print orders?</string>
    <string name="complete_confirmation">Mark the selected jobs as complete?</string>
    <string name="mark_as_complete">Mark as Complete</string>
    <string name="remove">Remove</string>
    <string name="po_number">PO.NO</string>
    <string name="error_po_not_found">Print order with given number not found</string>
    <string name="ok">OK</string>
    <string name="invalid_rid_entered">Invalid Plate Number</string>
    <string name="last_completed_on">Last completed on: %1$s</string>
    <string name="simple_format_last_completion">"dd/MM/yyyy, hh:mm a"</string>
    <string name="loading">Loading…</string>
    <string name="notes_saved_successfully">Notes saved successfully</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_confirmation">Do you really want to exit without saving?</string>
    <string name="exit">Exit</string>
    <string name="po_not_found">PO not found</string>
    <string name="po_not_found_desc">This print order was moved or removed by some other person using this app and this screen will now close</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="mark_as_pending">Mark as pending</string>
    <string name="clear_pending">Clear pending</string>
    <string name="search_hint">PO No, Plate No or Bill No</string>
    <string name="search">Search</string>
    <string name="invoice">Invoice</string>
    <string name="search_by">Search By </string>
    <string name="po_number_and_date">PO: %1$d - %2$s</string>
    <string name="rid_xx">RID: %1$d</string>
    <string name="active">ACTIVE</string>
    <string name="completed">COMPLETED</string>
    <string name="cancelled">CANCELLED</string>
    <string name="xx_results">%1$d Result(s)</string>
    <string name="no_results_found">No results found!</string>
    <string name="invoice_history">Invoice History</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_job">Create New Job</string>
    <string name="edit_job">Edit Job</string>
    <string name="select_client">Select Client</string>
    <string name="invalid_client_name">Invalid Client Name. Please select a client again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmation_password_match_error">Password and confirmation password should match</string>
    <string name="login">Login</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="sign_out_caps">SIGN OUT</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password must be at least 8 characters long</string>
    <string name="user_not_found">No user found with this Email</string>
    <string name="wrong_password">Wrong password. Try again</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="dont_have_an_account_ques">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="register_caps">REGISTER</string>
    <string name="forgot_password_desc">To reset your password, enter your email address
        below to send a password reset mail. Then check your mail and follow the
        instructions in the mail</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email_caps">SEND EMAIL</string>
    <string name="email_to_reset">Email to reset</string>
    <string name="password_reset_mail_sent">Password reset mail sent successfully</string>
    <string name="name">Name</string>
    <string name="refresh_caps">REFRESH</string>
    <string name="guest_greeting">Welcome</string>
    <string name="activation_description">This account now needs to be activated before you can
        use this app. Kindly contact the administrator of this app with your registered email
        address for activation.\n\nOnce Activated, you can refresh to proceed</string>
    <string name="clients">Clients</string>
    <string name="client_history">Client History</string>
    <string name="xx_clients">%1$d Clients</string>
    <string name="no_clients_found">No Clients Found</string>
    <string name="change_user_role">Change user role</string>
    <string name="update_role">Update Role</string>
    <string name="update_role_caps">UPDATE ROLE</string>
    <string name="update_role_desc">Enter the email address of the user for whom you wish
        to update the role</string>
    <string name="user_role">User Role</string>
    <string name="role_update_success">User role updated successfully!</string>
    <string name="menu_allot">Allot</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_invoice">Invoice</string>
</resources>