<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/mnu_invoice"
        android:icon="@drawable/ic_rupee"
        android:orderInCategory="100"
        android:title="@string/menu_invoice"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mnu_allot"
        android:icon="@drawable/ic_upload"
        android:orderInCategory="200"
        android:title="@string/menu_allot"
        app:showAsAction="always" />

    <item android:id="@+id/mnu_mark_as_pending"
        android:icon="@drawable/ic_error"
        android:orderInCategory="300"
        android:title="@string/mark_as_pending"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/mnu_clear_pending"
        android:icon="@drawable/ic_clear_error"
        android:orderInCategory="400"
        android:title="@string/clear_pending"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mnu_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="500"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />


</menu>