<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/mnu_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/mnu_clients"
        android:orderInCategory="200"
        android:title="@string/clients"
        app:showAsAction="never"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/mnu_invoice_history"
        android:orderInCategory="300"
        android:icon="@drawable/ic_history"
        android:title="@string/invoice_history"
        app:showAsAction="never"/>

</menu>