<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lamination"
            style="@style/FragmentHeadingText"/>

        <RadioGroup
            android:id="@+id/radio_group_film"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <RadioButton
                android:id="@+id/radio_pvc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pvc"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_bopp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bopp"
                android:layout_marginStart="24dp"/>

            <RadioButton
                android:id="@+id/radio_matt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matt"
                android:layout_marginStart="24dp"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_micron"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/micron"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_micron"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="12dp"
            android:hint="@string/remarks">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"/>


    </LinearLayout>

</ScrollView>