<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="24dp"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/fragment_heading"
                style="@style/FragmentHeadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_press_details" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbox_lamination"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/lamination"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbl_lamination_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="BOPP 15 Micron" />

            <TextView
                android:id="@+id/lbl_lamination_detail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="Ask details" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbox_foils"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/foils"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbl_foils_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="Gold foils" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbox_scoring"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/scoring"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbl_scoring_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="Ask details" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbox_folding"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/folding"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbl_folding_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="Ask details" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbox_binding"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/binding"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbl_binding_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="Perfect Binding" />

            <TextView
                android:id="@+id/lbl_binding_detail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="At Surya binding" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbox_spot_uv"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/spot_uv"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbl_spot_uv_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="Perfect Binding" />


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbox_aqueous_coating"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/aqueous_coating"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbl_aqueous_coating_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="Ask details" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbox_cutting"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/cutting"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbl_cutting_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="Ask details" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbox_packing"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/packing"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbl_packing_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                tools:text="Ask details" />




        </LinearLayout>


    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_print_order"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>



